--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 # =============================================================================
 # Release Workflow — Build release artifacts, publish GitHub Release,
-# and push CNPG-ready Docker image to GHCR.
+# and push extension image for CNPG Image Volume Extensions to GHCR.
 #
 # Triggered when a version tag (v*) is pushed.
 # =============================================================================
@@ -18,7 +18,7 @@ env:
   CARGO_TERM_COLOR: always
   PG_VERSION: "18"
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/pg_stream
+  IMAGE_NAME: ${{ github.repository_owner }}/pg_stream-ext
 
 permissions:
   contents: write   # create GitHub Releases
@@ -161,22 +161,63 @@ jobs:
         run: |
           cd dist
           tar xzf *.tar.gz
-          # Rename to fixed path so Dockerfile.release can reference it
+          # Rename to fixed path so Dockerfile.ext can reference it
           mv pg_stream-*-linux-amd64 artifact
           ls -la artifact/lib/ artifact/extension/
 
-      - name: Build smoke-test Docker image
+      - name: Build extension image
         run: |
-          # Reuse Dockerfile.release (context = dist/, artifact/ is fixed path)
           docker build \
             --build-arg REPO_URL=${{ github.server_url }}/${{ github.repository }} \
-            -t pg_stream_smoketest \
-            -f cnpg/Dockerfile.release \
+            --build-arg VERSION=${{ needs.build-release.outputs.version || 'dev' }} \
+            -t pg_stream-ext:test \
+            -f cnpg/Dockerfile.ext \
             dist/
 
-      - name: Run release smoke test
+      - name: Verify extension image layout
         run: |
-          # Start PostgreSQL with the extension preloaded
+          # The extension image is scratch-based (no shell, no PostgreSQL).
+          # Verify the file layout matches the CNPG Image Volume spec:
+          #   /lib/pg_stream.so
+          #   /share/extension/pg_stream.control
+          #   /share/extension/pg_stream--<ver>.sql
+          ID=$(docker create pg_stream-ext:test)
+          mkdir -p /tmp/ext-verify
+          docker cp "$ID:/lib/" /tmp/ext-verify/lib/
+          docker cp "$ID:/share/" /tmp/ext-verify/share/
+          docker rm "$ID"
+
+          echo "=== Extension image contents ==="
+          find /tmp/ext-verify -type f
+          echo "==============================="
+
+          # Verify required files exist
+          test -f /tmp/ext-verify/lib/pg_stream.so
+          test -f /tmp/ext-verify/share/extension/pg_stream.control
+          ls /tmp/ext-verify/share/extension/pg_stream--*.sql
+
+          # Verify image size is reasonable (< 50 MB)
+          SIZE=$(docker image inspect pg_stream-ext:test --format='{{.Size}}')
+          echo "Image size: ${SIZE} bytes"
+          if [[ "$SIZE" -gt 52428800 ]]; then
+            echo "WARNING: Extension image is larger than expected (> 50 MB)"
+          fi
+
+          echo "Extension image layout verified!"
+
+      - name: SQL smoke test (composite image)
+        run: |
+          # Build a temporary composite image to verify the extension
+          # actually works with PostgreSQL. This image is NOT shipped.
+          cat > /tmp/Dockerfile.smoke <<'DOCKERFILE'
+          FROM pg_stream-ext:test AS ext
+          FROM postgres:18.1
+          COPY --from=ext /lib/ /usr/lib/postgresql/18/lib/
+          COPY --from=ext /share/extension/ /usr/share/postgresql/18/extension/
+          DOCKERFILE
+
+          docker build -t pg_stream_smoketest -f /tmp/Dockerfile.smoke .
+
           docker run -d --name smoketest \
             -e POSTGRES_PASSWORD=test \
             -e POSTGRES_HOST_AUTH_METHOD=trust \
@@ -184,7 +225,6 @@ jobs:
             pg_stream_smoketest \
             postgres -c "shared_preload_libraries=pg_stream"
 
-          # Wait for PostgreSQL to be ready
           echo "Waiting for PostgreSQL..."
           for i in $(seq 1 30); do
             if docker exec smoketest pg_isready -U postgres 2>/dev/null; then
@@ -193,14 +233,12 @@ jobs:
             sleep 1
           done
 
-          # Verify the server started properly
           if ! docker exec smoketest pg_isready -U postgres; then
             echo "ERROR: PostgreSQL did not become ready"
             docker logs smoketest
             exit 1
           fi
 
-          # Run smoke tests
           docker exec smoketest psql -U postgres -c "CREATE EXTENSION pg_stream;"
           docker exec smoketest psql -U postgres -c \
             "SELECT extname, extversion FROM pg_extension WHERE extname = 'pg_stream';"
@@ -251,9 +289,10 @@ jobs:
           draft: false
           prerelease: ${{ contains(github.ref_name, '-rc') || contains(github.ref_name, '-beta') || contains(github.ref_name, '-alpha') }}
 
-  # ── Publish Docker image to GHCR (per-arch, parallel) ─────────────────
-  # Builds each arch image from the pre-built .so artifact — no Rust
-  # recompilation. amd64 and arm64 run in parallel, then a manifest is merged.
+  # ── Publish extension image to GHCR (per-arch, parallel) ──────────────
+  # Builds each arch extension image (scratch-based) from the pre-built
+  # .so artifact — no Rust recompilation. For CNPG Image Volume Extensions.
+  # amd64 and arm64 run in parallel, then a manifest is merged.
   publish-docker-arch:
     name: Docker image (${{ matrix.arch }})
     needs: [build-release, test-release]
@@ -283,7 +322,7 @@ jobs:
       - name: Extract artifact
         run: |
           cd dist && tar xzf *.tar.gz
-          # Rename extracted dir to a fixed path for Dockerfile.release
+          # Rename extracted dir to a fixed path for Dockerfile.ext
           mv pg_stream-*-${{ matrix.artifact_suffix }} artifact
           ls -la artifact/lib/ artifact/extension/
 
@@ -305,20 +344,21 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: dist/
-          file: cnpg/Dockerfile.release
+          file: cnpg/Dockerfile.ext
           push: true
           platforms: ${{ matrix.arch }}
           build-args: |
             REPO_URL=${{ github.server_url }}/${{ github.repository }}
+            VERSION=${{ steps.version.outputs.version }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}-${{ matrix.platform_tag }}
           labels: |
-            org.opencontainers.image.title=pg_stream
-            org.opencontainers.image.description=PostgreSQL 18 with pg_stream extension (CloudNativePG-ready)
+            org.opencontainers.image.title=pg_stream-ext
+            org.opencontainers.image.description=pg_stream extension for CloudNativePG Image Volume Extensions
             org.opencontainers.image.licenses=Apache-2.0
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # ── Merge per-arch images into a single multi-arch manifest ─────────────
+  # ── Merge per-arch extension images into a single multi-arch manifest ──
   publish-docker:
     name: Publish Docker manifest
     needs: publish-docker-arch
