fix(ci): pass dummy command to docker create for scratch images
scratch-based images have no CMD/ENTRYPOINT, causing 'no command
specified' error. The command is never executed — docker create only
creates the container layer for file extraction via docker cp.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -269,7 +269,7 @@ jobs:
 
       - name: Verify extension image layout
         run: |
-          ID=$(docker create pg_stream-ext:ci)
+          ID=$(docker create pg_stream-ext:ci true)
           mkdir -p /tmp/ext-verify
           docker cp "$ID:/lib/" /tmp/ext-verify/lib/
           docker cp "$ID:/share/" /tmp/ext-verify/share/
