--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -181,7 +181,7 @@ jobs:
           #   /lib/pg_stream.so
           #   /share/extension/pg_stream.control
           #   /share/extension/pg_stream--<ver>.sql
-          ID=$(docker create pg_stream-ext:test)
+          ID=$(docker create pg_stream-ext:test true)
           mkdir -p /tmp/ext-verify
           docker cp "$ID:/lib/" /tmp/ext-verify/lib/
           docker cp "$ID:/share/" /tmp/ext-verify/share/
