ci: integrate TPC-H-derived tests into E2E CI job
- Add 'Run TPC-H-derived correctness tests' step to e2e-tests job
  in .github/workflows/ci.yml (runs --ignored tests on push to main)
- Bump e2e-tests timeout from 25 to 30 min to accommodate TPC-H
- Update PLAN_TEST_SUITE_TPC_H.md: status COMPLETE, CI integrated,
  add prioritized remaining work (R1-R3)
- Update e2e_tpch_tests.rs module doc to mention CI integration

Verified: Phase 1 22/22, Phase 2 21/22 (Q07 known), Phase 3 22/22
Unit tests: 954 passed, fmt + lint clean

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
     name: E2E tests
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
-    timeout-minutes: 25
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
 
@@ -114,6 +114,11 @@ jobs:
 
       - name: Run E2E test suite
         run: cargo test --test 'e2e_*' -- --test-threads=1
+
+      - name: Run TPC-H-derived correctness tests
+        run: |
+          cargo test --test e2e_tpch_tests -- \
+            --ignored --test-threads=1 --nocapture
 
   # ── Benchmarks (non-blocking, Linux only) ───────────────────────────────
   # Expensive; run on weekly schedule and manual dispatch only.
